tests/fails/f37.t

terra foo()
  return 4 .. 4
end
foo()